@@ -1,3 +1,9 @@
+2002-08-07  Roland McGrath  <roland@redhat.com>
+
+	* sysdeps/i386/dl-machine.h (elf_machine_rel): Add to, don't clobber,
+	unrelocated initial value for DTPOFF32 and TPOFF32 relocs.
+	Reported by Jakub Jelinek  <jakub@redhat.com>.
+
 2002-08-07  Jakub Jelinek  <jakub@redhat.com>
 
         * malloc/malloc.c (public_cALLOc): Check ELEM_SIZE != 0 before
